--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/1696cad8da.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -47,12 +48,18 @@
                     <p>Wszystkie zgony</p>
                 </div>
             </div>
-            <div class="charts-box"></div>
+            <div class="charts-box">
+                <label for="startDate">Data początkowa:</label>
+                <input id="startDate" type="date">
+                <label for="endDate">Data końcowa:</label>
+                <input id="endDate" type="date">
+            </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/chart.js"></script>
 </body>
 
 </html>
