Funkcjonalność przycisków do wykresów

--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
                     </div>
                     <div class="chart-inputs-pl">
                         <div class="date-input">
-                            <label for="startDate">Data początkowa:</label>
-                            <input id="startDate" type="date">
+                            <label for="startDatePL">Data początkowa:</label>
+                            <input id="startDatePL" type="date">
                         </div>
                         <div class="date-input">
-                            <label for="endDate">Data końcowa:</label>
-                            <input id="endDate" type="date">
+                            <label for="endDatePL">Data końcowa:</label>
+                            <input id="endDatePL" type="date">
                         </div>
                         <button class="show-chart-pl">Pokaż wykres</button>
                     </div>
                 </div>
 
                 <div class="chart-box-world">
-                    <div class="chart">
-                        <canvas id="chartWorld" height="100"></canvas>
+                    <div class="chart-world">
+                        <canvas id="chartWorld"></canvas>
                     </div>
                     <div class="chart-inputs-world">
                         <div class="date-input">
