--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@
         <div class="header">
             <h2>uC<img src="./icons/covid-icon1.png" class="covid-icon" alt="">VID</h2>
         </div>
-
+        <select name="countries" id="countries-select">
+            <option value="PL" selected>Polska</option>
+            <option value="CN">Chiny</option>
+            <option value="FR">Francja</option>
+            <option value="DE" >Niemcy</option>
+            <option value="ES">Hiszpania</option>
+            <option value="SE">Szwecja</option>
+            <option value="GB">Wielka Brytania</option>
+            <option value="US">USA</option>
+        </select>
         <div class="covid-box">
             <div class="stats-box">
                 <div class="stats-box-pl">
                     <div class="label">
                         <img src="./icons/poland.png" class="location-icon" alt="">
-                        <span class="location-text">Polska</span>
+                        <span class="country-text">Polska</span>
                     </div>
                     <div class="statistics">
                         <div class="statistic">
@@ -57,7 +66,7 @@
                 <div class="stats-box-world">
                     <div class="label">
                         <img src="./icons/location.png" class="location-icon" alt="">
-                        <span class="location-text">Świat</span>
+                        <span class="world-text">Świat</span>
                     </div>
                     <div class="statistics">
                         <div class="statistic">
