--- a/index.html
+++ b/index.html
@@ -21,34 +21,34 @@
         </div>
         <div class="covid-box">
             <div class="stats-box">
-                <div class="stats-box-pl">
+                <div class="stats-box-country">
                     <div class="label">
                         <img src="" class="country-icon" alt="">
                         <span class="country-text"></span>
                     </div>
                     <div class="statistics">
                         <div class="statistic">
-                            <h3 class="daily-confirmed-pl"></h3>
+                            <h3 class="daily-confirmed-country"></h3>
                             <p>Przypadki</p>
                         </div>
                         <div class="statistic">
-                            <h3 class="daily-deaths-pl"></h3>
+                            <h3 class="daily-deaths-country"></h3>
                             <p>Zgony</p>
                         </div>
                         <div class="statistic">
-                            <h3 class="active-cases-pl">
+                            <h3 class="active-cases-country">
                             </h3>
                             <p>Chorzy obecnie</p>
                         </div>
                     </div>
                     <div class="statistics">
                         <div class="statistic">
-                            <h3 class="total-confirmed-pl"></h3>
+                            <h3 class="total-confirmed-country"></h3>
                             <p>Wszystkie przypadki</p>
                         </div>
 
                         <div class="statistic">
-                            <h3 class="total-deaths-pl"></h3>
+                            <h3 class="total-deaths-country"></h3>
                             <p>Wszystkie zgony</p>
                         </div>
                     </div>
@@ -103,18 +103,18 @@
             </div>
 
             <div class="charts-box">
-                <div class="chart-box-pl">
+                <div class="chart-box-country">
                     <div class="chart">
-                        <canvas id="chartPL"></canvas>
+                        <canvas id="chartCountry"></canvas>
                     </div>
-                    <div class="chart-inputs-pl">
+                    <div class="chart-inputs-country">
                         <div class="date-input">
-                            <label for="startDatePL">Data początkowa:</label>
-                            <input id="startDatePL" type="date">
+                            <label for="startDateCountry">Data początkowa:</label>
+                            <input id="startDateCountry" type="date">
                         </div>
                         <div class="date-input">
-                            <label for="endDatePL">Data końcowa:</label>
-                            <input id="endDatePL" type="date">
+                            <label for="endDateCountry">Data końcowa:</label>
+                            <input id="endDateCountry" type="date">
                         </div>
                     </div>
                 </div>
